2003-08-31  Niklas Knutsson  <nq@altern.org>

	* Move builtin functions to fraction system
	* Reactivate display modes, decimals and precision
	* Use GMP if available in Integer class (much faster)

2003-08-30  Niklas Knutsson  <nq@altern.org>

	* Show if result is exact or not
	* Arbitrary precision
	* Move from long double to Fraction

2003-08-24  Niklas Knutsson  <nq@altern.org>

	* Decimal string to fraction
	* Date functions (for financial functions)
	* Fixes

2003-08-23  Niklas Knutsson  <nq@altern.org>

	* Localized dot and more

2003-08-22  Niklas Knutsson  <nq@altern.org>

	* Fractions and restructuring

2003-08-20  Niklas Knutsson  <nq@altern.org>

	* CALCULATOR macro (removes Calculator object from all classes)
	* New Prefix class and new get/add prefix functions; prefixes stored in a sorted vector
	* New get Function/Variable/Unit(index) functions

2003-08-20  Niklas Knutsson  <nq@altern.org>

	* Fraction button
	* Fraction Manager
	* New Fraction class

2003-08-19  Niklas Knutsson  <nq@altern.org>

	* Add title label to insert function dialog
	* Remove duplicate adding of answer variables, and remove from global definitions file... and gettextize

2003-08-18  Niklas Knutsson  <nq@altern.org>

	* Qalculate! version 0.2 released
	* Last minute fixes
	* More unicode
	* Fix display of exponent of exponent
	* Put unicode chars on buttons in code and add option to disable unicode signs
	* Unicode math operators
	* Save version info to configuration file
	* Update version number

2003-08-17  Niklas Knutsson  <nq@altern.org>

	* Only put "1 " in front of unit in toplevel
	* Fix 5*5^m (endless loop in Manager::convert)
	* Unscientific mode gives inexact result display -- disable for now
	* Disable installation of old German translation (will enable again after v0.2)
	* Create en_GB and en_US locales to get that nice square root sign
	* Do not shrink result label on clear
	* Do not expand menu buttons
	* Make functions dialog a bit nicer