@@ -40,6 +40,7 @@
 *BuiltinFunction	floor	Arithmetics	Round downwards	0
 *BuiltinFunction	trunc	Arithmetics	Round towards zero	0
 *BuiltinFunction	round	Arithmetics	Round	0
+*BuiltinFunction	factorial	Arithmetics	Factorial	0
 *BuiltinFunction	frac	Arithmetics	Extract fractional part	0
 *BuiltinFunction	int	Arithmetics	Extract integer part	0
 *BuiltinFunction	mod	Arithmetics	Reminder (mod)	0	Denominator
